# weston

./: .gitignore  Makefile.am  azure-pipelines.yml  configure.ac  meson.build  meson_options.txt
clients/: desktop-shell.c  meson.build  rdprail-shell.c  simple-egl.c  simple-shm.c  window.c
compositor/: main.c  meson.build  rdpaudio.c  rdpaudio.h  rdpaudioin.c  rdpdisp.c  rdpdisp.h  weston.h  wslgd-notify.c  xwayland.c
desktop-shell/: exposay.c  shell.c  shell.h
include/libweston/: backend-rdp.h  libweston.h  xwayland-api.h
include/libweston-desktop/: libweston-desktop.h
ivi-shell/: ivi-layout.c
kiosk-shell/: kiosk-shell.c
libweston/: compositor.c  input.c  pixman-renderer.c  timeline.c  timeline.h
libweston-desktop/: internal.h  libweston-desktop.c  xwayland.c
libweston/backend-rdp/: hash.c  hash.h  meson.build  rdp.c  rdp.h  rdpaudio.c  rdpaudioin.c  rdpclip.c  rdpdisp.c  rdprail.c  rdputil.c
libweston/renderer-gl/: gl-renderer.c
protocol/: meson.build  weston-desktop-shell.xml  weston-rdprail-shell.xml
rdprail-shell/: app-list.c  img-load.c  input-panel.c  meson.build  shell.c  shell.h
shared/: cairo-util.c  config-parser.c  frame.c  meson.build
src/: bindings.c  clipboard.c  compositor-x11.c  compositor.c  input.c  text-backend.c
tests/: surface-screenshot-test.c
xwayland/: launcher.c  selection.c  window-manager.c  xwayland-internal-interface.h  xwayland.h
